--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.0.0-rc.7",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "firebase": "^5.0.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^5.5.6",
